--- a/SportsGlobe.Web/Views/Shared/_Layout.cshtml
+++ b/SportsGlobe.Web/Views/Shared/_Layout.cshtml
@@ -36,6 +36,12 @@
             <div class="row">
                 <div class="col">
                     <h2>@ViewData["Title"]</h2>
+                    @if(TempData["Status"] != null)
+                    {
+                        <div class="alert alert-success">
+                            @TempData["Status"]
+                            </div>
+                    }
                 </div>
             </div>
             @RenderBody()
