--- a/SportsGlobe.Web/wwwroot/css/site.css
+++ b/SportsGlobe.Web/wwwroot/css/site.css
@@ -19,7 +19,7 @@ body {
 
 
 header#top-header {
-    background: #333;
+    background: rgba(0,0,0,0.7);
     border-radius: 16px;
     color:#fff;
     padding: 10px;
