work on various things

--- a/SportsGlobe.Web/Views/Stadiums/Partials/_Add.cshtml
+++ b/SportsGlobe.Web/Views/Stadiums/Partials/_Add.cshtml
@@ -30,7 +30,7 @@
         <div class="col">
             <div class="form-group">
                 <label asp-for="LatLongInput">Latitude / Longitude</label>
-                <input asp-for="LatLongInput" class="form-control" type="text" />
+                <input asp-for="LatLongInput" autocomplete="off" class="form-control" type="text" />
             </div>
         </div>
     </div>
