--- a/SportsGlobe.Web/Views/Map/Index.cshtml
+++ b/SportsGlobe.Web/Views/Map/Index.cshtml
@@ -23,7 +23,7 @@
     <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
     <script>
         //
-        let map = L.map('map', {minZoom: 2}).setView([51.505, -0.09], 5);
+        let map = L.map('map', { minZoom: 2 }).setView([47.75,19.42], 4);
         L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
         }).addTo(map);
