--- a/SportsGlobe.Web/Views/Teams/Add.cshtml
+++ b/SportsGlobe.Web/Views/Teams/Add.cshtml
@@ -1,6 +1,8 @@
 ﻿@using SportsGlobe.Web.ViewModels.Teams
 @model AddTeamViewModel
 
+<h2>@ViewData["Title"]</h2>
+
 <div style="min-height:70vh">
     <div class="col col-md-4 mx-auto">
         <form>
