--- a/SportsGlobe.Web/Views/Stadiums/Add.cshtml
+++ b/SportsGlobe.Web/Views/Stadiums/Add.cshtml
@@ -1,5 +1,6 @@
 ﻿@using SportsGlobe.Web.ViewModels.Stadiums
 @model AddStadiumViewModel
+<h2>@ViewData["Title"]</h2>
 <div class="row">
     <div class="col col-md-4 mx-auto">
         <form method="post">
@@ -19,8 +20,8 @@
                     @for(int i = 0; i < Model.Sports.Count; i++)
                     {
                        <div class="form-check">
-                            <input class="form-check-input" id="SelectedSports" name="SelectedSports[]" type="checkbox" value="@Model.Sports[i].Id">
-                            <label class="form-check-label" asp-for="SelectedSports">
+                            <input class="form-check-input" id="SelectedSports-@i" name="SelectedSports[]" type="checkbox" value="@Model.Sports[i].Id">
+                            <label class="form-check-label" for="SelectedSports-@i">
                                 @Model.Sports[i].Name
                             </label>
                         </div>
@@ -32,24 +33,10 @@
                 <div class="col">
                     <div class="form-group">
                         <label asp-for="LatLongInput">Latitude / Longitude</label>
-                        <input asp-for="LatLongInput" class="form-control" type="text" />
+                        <input asp-for="LatLongInput" autocomplete="off" class="form-control" type="text" />
                     </div>
                 </div>
             </div>
-            @*@<div class="row">
-                <div class="col">
-                    <div class="form-group">
-                        <label asp-for="Latitude"></label>
-                        <input asp-for="Latitude" class="form-control" type="text" />
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="form-group">
-                        <label asp-for="Longitude"></label>
-                        <input asp-for="Longitude" class="form-control" type="text" />
-                    </div>
-                </div>
-            </div>*@
             <hr />
             <div>
                 <button class="btn btn-primary w-100">Add</button>
