--- a/SportsGlobe.Web/Views/Stadiums/Partials/_Add.cshtml
+++ b/SportsGlobe.Web/Views/Stadiums/Partials/_Add.cshtml
@@ -17,8 +17,8 @@
             @for (int i = 0; i < Model.Sports.Count; i++)
             {
                 <div class="form-check">
-                    <input class="form-check-input" id="SelectedSports" name="SelectedSports[]" type="checkbox" value="@Model.Sports[i].Id">
-                    <label class="form-check-label" asp-for="SelectedSports">
+                    <input class="form-check-input" id="SelectedSports-@i" name="SelectedSports[]" type="checkbox" value="@Model.Sports[i].Id">
+                    <label class="form-check-label" for="SelectedSports-@i">
                         @Model.Sports[i].Name
                     </label>
                 </div>
