--- a/SportsGlobe.Web/Views/Shared/_MapLayout.cshtml
+++ b/SportsGlobe.Web/Views/Shared/_MapLayout.cshtml
@@ -15,10 +15,10 @@
             Sports Globe
         </div>
         <nav style="display:flex;flex-direction:column;" id="sports-selector">
-            <a class="item" data-sport-id="2" href="#football">Football (soccer)</a>
-            <a class="item" data-sport-id="3" href="#baseball">Baseball</a>
-            <a class="item" data-sport-id="4" href="#basketball">Basketball</a>
-            <a class="item" data-sport-id="7" href="#icehockey">Ice Hockey</a>
+            <a class="item" href="#football">Football (soccer)</a>
+            <a class="item" href="#baseball">Baseball</a>
+            <a class="item" href="#basketball">Basketball</a>
+            <a class="item" href="#icehockey">Ice Hockey</a>
         </nav>
     </header>
     
