handle sports with hyphen when loading  from url anchor

--- a/SportsGlobe.Web/Views/Shared/_MapLayout.cshtml
+++ b/SportsGlobe.Web/Views/Shared/_MapLayout.cshtml
@@ -18,7 +18,7 @@
             <a class="item" href="#football">Football (soccer)</a>
             <a class="item" href="#baseball">Baseball</a>
             <a class="item" href="#basketball">Basketball</a>
-            <a class="item" href="#icehockey">Ice Hockey</a>
+            <a class="item" href="#ice-hockey">Ice Hockey</a>
         </nav>
     </header>
     
