add dynamic sports menu;

--- a/SportsGlobe.Web/Views/Map/Index.cshtml
+++ b/SportsGlobe.Web/Views/Map/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using SportsGlobe.Web.ViewModels.Map
+@model MainMapViewModel
+@{
     Layout = "_MapLayout";
 }
 <div id="map" style="width:auto;height:100vh;">
